# libColorProcess

./: .gitignore  CMakeLists.txt  ColorToolCore.h  LICENSE.txt  README.md  libColorTool.h
Colors/: Analysis.h  ColorPalette.h  ColorSpaces.cpp  ColorSpaces.h  Colors.cpp  Colors.h  GenericColor.cpp  GenericColor.h  Palette.h  Palette_MedianSplit.hpp  Stats.h
Image/: ImageData.h  ImageImport.cpp  ImageImport.h  ImageIterator.h
Image/dependencies/: spng.h
Math/: CicularUInt.h  CircularFloat.h  MatrixN.h  SimplexHull.h  Vector2.h  Vector3.h  Vector3Macro.h  Vector3Mixin.h  Vector4.h  Vector4Macro.h  Vector4Mixin.h  VectorN.h
Palette/: Palette.h  PaletteImport.cpp  PaletteImport.h  Palette_Import.cpp  Palette_MapColor.hpp  Palette_MedianSplit.hpp  Palette_Sort.hpp
Tests/: CMakeLists.txt  Colors_Test.cpp  Tests.cpp  utest.h
Utils/: Traits.h
examples/: CMakeLists.txt  HtmlExporter.cpp  HtmlExporter.h  credit.txt  invert_colors.cpp  palette_example.cpp  palette_operations.cpp  source_image.tga  source_image2.tga  source_palette.gpl  style.css  test_image.tga
examples/src/: basic_remap.cpp  export_palette.cpp  invert_colors.cpp  remap_colors.cpp  smart_remap.cpp
test/: CMakeLists.txt  color_tests.cpp  image_tests.cpp  math_tests.cpp  palette_tests.cpp  test_main.cpp  test_utils.h  unit_tests.cpp  yestest.cpp  yestest.h
